@@ -17,6 +17,8 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? ????
 	  or not (STR #3142). It also captures subwindows of GL windows.
 	- Fl::delete_widget() now hides the widget or window immediately
 	  (i.e. when called) - only destruction is delayed as before.
+  - Reading of .pbm image files is fixed: 1 is now interpreted as
+    black, and images of width a multiple of 8 are correctly read.
 
 CHANGES IN FLTK 1.3.3					RELEASED: Nov 03 2014
 
